# mtg-scripts

./: .gitignore  README.md  mtg_cli.py  pyproject.toml
mtg_utils/: __init__.py  card_processing.py  config.py  constants.py  database.py  download.py  exceptions.py  file_operations.py  io_operations.py  performance.py  reporting.py  retry.py  sql.py
scripts/: __init__.py  export_from_list.py  export_top_cards.py  process_cards.py  process_collections.py  process_prices.py
tests/: __init__.py  conftest.py  test_card_processing.py  test_database.py  test_io_operations.py
