[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mtg-scripts"
version = "1.0.0"
description = "Download and process Magic: The Gathering card data from MTGJSON"
requires-python = ">=3.10"
dependencies = [
    "tqdm>=4.65.0",     # Progress bars are nice to have
    "urllib3>=2.0.0",   # For downloading files from MTGJSON
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[project.scripts]
mtg = "mtg_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mtg_utils"]

[tool.ruff]
target-version = "py310"
line-length = 88

# Enable formatting
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]  # Error, Warning, pyFlakes, Import sorting
ignore = ["E501"]  # Line too long - formatter handles this

[tool.uv]
default-groups = ["dev"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m not integration')",
]
